<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PPfunsFileManager</string>
    <!-- viewpager 标题栏字体-->


    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="photo_tip">亲友说：</string>
    <string name="_0_00">0:00</string>
    <string name="close">关闭</string>
    <string name="media_item_remove">媒体文件已被移除</string>
    <string name="error_file">文件异常</string>
    <string name="no_data">好像没有发现数据</string>
    <string name="btn_txt_back">返回</string>
    <string name="tip_no_relative_app">没有安装相关应用，正在获取推荐....</string>
    <string name="title_recommeded_app">推荐下载</string>
    <string name="loading_image_tip">正在加載图片....</string>
    <string name="gif">GIF</string>
    <string name="exit_audio_player">确认退出音乐播放</string>
    <string name="confirm">确认</string>

    <string name="lrc">
        [00:30.010]对这个世界如果你有太多的抱怨\n[00:33.190]跌倒了就不敢继续往前走\n[00:37.660]为什么人要这么的脆弱堕落\n[00:42.080]请你打开电视看看\n[00:43.630]多少人为生命在努力勇敢的走下去\n[00:47.550]我们是不是该知足\n[00:49.480]珍惜一切就算没有拥有\n[00:53.840]还记得你说家是唯一的城堡\n[00:57.420]随着稻香河流继续奔跑\n[01:00.470]微微笑小时候的梦我知道\n[01:04.750]\n[01:05.530]不要哭让萤火虫带着你逃跑\n[01:09.150]乡间的歌谣永远的依靠\n[01:12.030]回家吧 回到最初的美好\n[01:16.970]\n[01:41.090]不要这么容易就想放弃 就像我说的\n[01:44.640]追不到的梦想换个梦不就得了\n[01:47.440]为自己的人生鲜艳上色\n[01:51.030]先把爱涂上喜欢的颜色\n[01:53.150]\n[01:53.790]笑一个吧 功成名就不是目的\n[01:57.160]让自己快乐快乐这才叫做意义\n[02:00.000]童年的纸飞机 现在终于飞回我手里\n[02:05.620]所谓的那快乐 赤脚在田里追蜻蜓追到累了\n[02:09.840]偷摘水果被蜜蜂给叮到怕了\n[02:13.100]谁在偷笑呢\n[02:14.500]我靠着 稻草人 吹着风 唱着歌 睡着了\n[02:17.780]哦~哦~午后吉它在虫鸣中更清脆\n[02:20.890]哦~哦~阳光洒在路上就不怕心碎\n[02:24.400]珍惜一切 就算没有拥有\n[02:27.970]\n[02:28.960]还记得你说家是唯一的城堡\n[02:32.470]随着稻香河流继续奔跑\n[02:35.450]微微笑 小时候的梦我知道\n[02:40.430]不要哭让萤火虫带着你逃跑\n[02:44.110]乡间的歌谣永远的依靠\n[02:47.050]回家吧 回到最初的美好\n[02:52.850]还记得你说家是唯一的城堡\n[02:55.770]随着稻香河流继续奔跑\n[02:58.710]微微笑 小时候的梦我知道\n[03:03.320]\n[03:03.850]不要哭让萤火虫带着你逃跑\n[03:07.530]乡间的歌谣永远的依靠\n[03:10.400]回家吧 回到最初的美好\n
    </string>
    <string name="no_lyric">没有相匹配的歌词 ～(　・ˍ・)</string>
    <string name="loading_lyric">正在获取歌词 ～(～o￣▽￣)～o</string>

</resources>
